--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-images": "^1.8.5",
     "nodemailer": "^6.10.0",
     "react": "19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
