--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,9 +1,12 @@
 name: Sync to CampoInteligente
 
 on:
+  push: # Gatilho para executar ao receber commits
+    branches:
+      - main # Executa apenas se o push for na branch main
   schedule:
-    - cron: '*/30 * * * *'  # Executa a cada 30 minutos
-  workflow_dispatch:        # Permite execução manual
+    - cron: "*/30 * * * *" # Executa a cada 30 minutos
+  workflow_dispatch: # Permite execução manual
 
 jobs:
   mirror:
