--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -23,13 +23,14 @@ jobs:
           git config --global user.email "action@github.com"
 
       - name: Executar script Python
-        run: python update-readme.py
+        run: |
+          python update-readme.py  # Certifique-se de que o script está no diretório correto
 
       - name: Commit e Push
         run: |
           git add documentos/README.md  # Especificando o caminho correto do arquivo
-          git commit -m "Atualização automática do README"
-          git push https://$GH_PAT@github.com/restic36/startup-campo-inteligente-site.git
-
+          git commit -m "Atualização automática do README" || echo "Nenhuma alteração para commit"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/restic36/startup-campo-inteligente-site.git
+          git push origin main
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
