--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "campo-inteligente",
-  "version": "1.50.1",
   "description": "Campo Inteligente - Aplicativo de gestão agrícola para o campo inteligente",
+  "version": "1.50.11",
   "commit": "d2f3df9",
-  "date": "2025-05-15T13:00:00.000Z",
+  "date": "2025-05-19T23:14:01.990Z",
   "tag": "v1.3.2",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "postbuild": "node scripts/generate-version.js",
-  "start": "next start",
-  "lint": "next lint"
-},
+    "prebuild": "node scripts/bump-version.js",
+    "build": "next build",
+    "build:version": "node scripts/bump-version.js",
+    "postbuild": "node scripts/generate-version.js",
+    "dev": "next dev",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
