--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git add documentos/README.md documentos/versao.txt
           git commit -m "Atualização automática do README" || echo "Nenhuma alteração para commit"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/restic36/startup-campo-inteligente-site.git
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
           git push origin main
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
