--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -26,21 +26,29 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Passo 3: Instalar dependências
+      # ✅ Passo 3: Configurar timezone para America/Sao_Paulo
+      - name: Ajustar fuso horário para Brasília
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tzdata
+          sudo ln -fs /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime
+          sudo dpkg-reconfigure -f noninteractive tzdata
+
+      # Passo 4: Instalar dependências
       - name: Instalar dependências
         run: pip install pytz
 
-      # Passo 4: Executar o script Python
+      # Passo 5: Executar o script Python
       - name: Executar script Python update-readme.py
-        run: python .github/workflows//update-readme.py
+        run: python .github/workflows/update-readme.py
 
-      # Passo 5: Configurar Git
+      # Passo 6: Configurar Git
       - name: Configurar Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # Passo 6: Commit e push do README.md e versao.txt, se houver mudanças
+      # Passo 7: Commit e push do README.md e versao.txt, se houver mudanças
       - name: Commit e push do README.md
         run: |
           if git diff --quiet; then
@@ -56,6 +64,6 @@ jobs:
               git rebase --abort
               exit 0
             }
-      
+
             git push
           fi
