--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,28 @@
-# Workflow para fazer deploy automático ao dar push na branch main
 name: Deploy on main push
 
 on:
   push:
     branches:
-      - main  # Dispara somente em commits na branch main
+      - main  # Dispara quando houver push na branch main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Ambiente Ubuntu para rodar o job
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3  # Faz o checkout do código do repositório
+      uses: actions/checkout@v3
 
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.5.4
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Chave privada SSH para autenticação no servidor remoto
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Deploy to server
       run: |
-        # Conecta no servidor via SSH na porta 21022 e atualiza o repositório local
-        ssh -p 21022 marcosmorais@campointeligente.ddns.com.br '
-          cd /var/www/campointeligente-site &&
-          git fetch origin &&
+        ssh -p 21022 marcosmorais@campointeligente.ddns.com.br << 'EOF'
+          cd /var/www/campointeligente-site || exit 1
+          git fetch origin
           git reset --hard origin/main
-        '
+          exit
+        EOF
