--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.5",
@@ -27,7 +28,8 @@
     "nodemailer": "^6.10.0",
     "react": "19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "9.23.0",
