--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "react": "19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "eslint": "9.23.0",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.2.3"
   }
 }
