--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_API_URL=https://localhost:8000
 EMAIL_USER=startupcampointeligente@gmail.com
 EMAIL_PASS=kvpgsvxidpkdmnoz
 EMAIL_TO=startupcampointeligente@gmail.com
