--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=https://localhost:8000
+REAL_API_URL=http://campointeligente.ddns.com.br:21083/api/v1/chatbot/webchat/
 EMAIL_USER=startupcampointeligente@gmail.com
 EMAIL_PASS=kvpgsvxidpkdmnoz
 EMAIL_TO=startupcampointeligente@gmail.com
