feat: modificaçoes navbar, footer e index

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 EMAIL_USER=startupcampointeligente@gmail.com
 EMAIL_PASS=kvpgsvxidpkdmnoz
 EMAIL_TO=startupcampointeligente@gmail.com
+
+# Para a API do Django (usada no backend do Next.js)
+REAL_API_URL="http://campointeligente.ddns.com.br:21083/api/v1/chatbot/webchat/"
+
+# Para o link do Painel de Controle (usado no frontend)
+NEXT_PUBLIC_PANEL_URL="http://campointeligente.ddns.com.br:21083/admin/"
