fix: troca de posição do botão saiba mais, retirada de botoes das redes na versão mobile e add git iagro

--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ EMAIL_PASS=kvpgsvxidpkdmnoz
 EMAIL_TO=startupcampointeligente@gmail.com
 
 # Para a API do Django (usada no backend do Next.js)
-REAL_API_URL="http://campointeligente.ddns.com.br:21083/api/v1/chatbot/webchat/"
+REAL_API_URL="http://127.0.0.1:8000/api/v1/chatbot/webchat/"
 
 # Para o link do Painel de Controle (usado no frontend)
 NEXT_PUBLIC_PANEL_URL="http://campointeligente.ddns.com.br:21083/admin/"
+
+# http://campointeligente.ddns.com.br:21083/api/v1/chatbot/webchat/
